--- a/ogranizED/app/src/main/res/values/strings.xml
+++ b/ogranizED/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ogranizED</string>
+    <string name="app_name">organizED</string>
     <string name="action_settings">Settings</string>
     <string name="create">create</string>
 </resources>
